--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -30,6 +30,7 @@
     <dependency>
       <groupId>com.example.maven-project.server</groupId>
       <artifactId>server</artifactId>
+      <version>1.0-SNAPSHOT</version>
       <!-- scope by default -->
     </dependency>
            
