--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -28,7 +28,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.example.maven-project.server</groupId>
+      <groupId>com.example.maven-project</groupId>
       <artifactId>server</artifactId>
       <version>1.0-SNAPSHOT</version>
       <!-- scope by default -->
